@@ -1,5 +1,6 @@
 #include "cmark-gfm-core-extensions.h"
 #include "autolink.h"
+#include "subscript.h"
 #include "strikethrough.h"
 #include "table.h"
 #include "tagfilter.h"
@@ -9,6 +10,7 @@
 
 static int core_extensions_registration(cmark_plugin *plugin) {
   cmark_plugin_register_syntax_extension(plugin, create_table_extension());
+  cmark_plugin_register_syntax_extension(plugin, create_subscript_extension());
   cmark_plugin_register_syntax_extension(plugin,
                                          create_strikethrough_extension());
   cmark_plugin_register_syntax_extension(plugin, create_autolink_extension());
