@@ -1,8 +1,8 @@
-#include "strikethrough.h"
+#include "subscript.h"
 #include <parser.h>
 #include <render.h>
 
-cmark_node_type CMARK_NODE_STRIKETHROUGH;
+cmark_node_type CMARK_NODE_SUBSCRIPT;
 
 static cmark_node *match(cmark_syntax_extension *self, cmark_parser *parser,
                          cmark_node *parent, unsigned char character,
@@ -27,8 +27,7 @@ static cmark_node *match(cmark_syntax_extension *self, cmark_parser *parser,
   res->start_line = res->end_line = cmark_inline_parser_get_line(inline_parser);
   res->start_column = cmark_inline_parser_get_column(inline_parser) - delims;
 
-  if ((left_flanking || right_flanking) &&
-      (delims == 2 || (!(parser->options & CMARK_OPT_STRIKETHROUGH_DOUBLE_TILDE) && delims == 1))) {
+  if ((left_flanking || right_flanking) && delims == 1) {
     cmark_inline_parser_push_delimiter(inline_parser, character, left_flanking,
                                        right_flanking, res);
   }
@@ -39,20 +38,20 @@ static cmark_node *match(cmark_syntax_extension *self, cmark_parser *parser,
 static delimiter *insert(cmark_syntax_extension *self, cmark_parser *parser,
                          cmark_inline_parser *inline_parser, delimiter *opener,
                          delimiter *closer) {
-  cmark_node *strikethrough;
+  cmark_node *subscript;
   cmark_node *tmp, *next;
   delimiter *delim, *tmp_delim;
   delimiter *res = closer->next;
 
-  strikethrough = opener->inl_text;
+  subscript = opener->inl_text;
 
   if (opener->inl_text->as.literal.len != closer->inl_text->as.literal.len)
     goto done;
 
-  if (!cmark_node_set_type(strikethrough, CMARK_NODE_STRIKETHROUGH))
+  if (!cmark_node_set_type(subscript, CMARK_NODE_SUBSCRIPT))
     goto done;
 
-  cmark_node_set_syntax_extension(strikethrough, self);
+  cmark_node_set_syntax_extension(subscript, self);
 
   tmp = cmark_node_next(opener->inl_text);
 
@@ -60,11 +59,11 @@ static delimiter *insert(cmark_syntax_extension *self, cmark_parser *parser,
     if (tmp == closer->inl_text)
       break;
     next = cmark_node_next(tmp);
-    cmark_node_append_child(strikethrough, tmp);
+    cmark_node_append_child(subscript, tmp);
     tmp = next;
   }
 
-  strikethrough->end_column = closer->inl_text->start_column + closer->inl_text->as.literal.len - 1;
+  subscript->end_column = closer->inl_text->start_column + closer->inl_text->as.literal.len - 1;
   cmark_node_free(closer->inl_text);
 
 done:
@@ -82,12 +81,12 @@ done:
 
 static const char *get_type_string(cmark_syntax_extension *extension,
                                    cmark_node *node) {
-  return node->type == CMARK_NODE_STRIKETHROUGH ? "strikethrough" : "<unknown>";
+  return node->type == CMARK_NODE_SUBSCRIPT ? "subscript" : "<unknown>";
 }
 
 static int can_contain(cmark_syntax_extension *extension, cmark_node *node,
                        cmark_node_type child_type) {
-  if (node->type != CMARK_NODE_STRIKETHROUGH)
+  if (node->type != CMARK_NODE_SUBSCRIPT)
     return false;
 
   return CMARK_NODE_TYPE_INLINE_P(child_type);
@@ -96,7 +95,7 @@ static int can_contain(cmark_syntax_extension *extension, cmark_node *node,
 static void commonmark_render(cmark_syntax_extension *extension,
                               cmark_renderer *renderer, cmark_node *node,
                               cmark_event_type ev_type, int options) {
-  renderer->out(renderer, node, "~~", false, LITERAL);
+  renderer->out(renderer, node, "~", false, LITERAL);
 }
 
 static void latex_render(cmark_syntax_extension *extension,
@@ -105,7 +104,7 @@ static void latex_render(cmark_syntax_extension *extension,
   // requires \usepackage{ulem}
   bool entering = (ev_type == CMARK_EVENT_ENTER);
   if (entering) {
-    renderer->out(renderer, node, "\\sout{", false, LITERAL);
+    renderer->out(renderer, node, "\\textsubscript{", false, LITERAL);
   } else {
     renderer->out(renderer, node, "}", false, LITERAL);
   }
@@ -117,9 +116,9 @@ static void man_render(cmark_syntax_extension *extension,
   bool entering = (ev_type == CMARK_EVENT_ENTER);
   if (entering) {
     renderer->cr(renderer);
-    renderer->out(renderer, node, ".ST \"", false, LITERAL);
+    renderer->out(renderer, node, "\\d\\s-2", false, LITERAL);
   } else {
-    renderer->out(renderer, node, "\"", false, LITERAL);
+    renderer->out(renderer, node, "\\s+2\\u", false, LITERAL);
     renderer->cr(renderer);
   }
 }
@@ -129,20 +128,20 @@ static void html_render(cmark_syntax_extension *extension,
                         cmark_event_type ev_type, int options) {
   bool entering = (ev_type == CMARK_EVENT_ENTER);
   if (entering) {
-    cmark_strbuf_puts(renderer->html, "<del>");
+    cmark_strbuf_puts(renderer->html, "<sub>");
   } else {
-    cmark_strbuf_puts(renderer->html, "</del>");
+    cmark_strbuf_puts(renderer->html, "</sub>");
   }
 }
 
 static void plaintext_render(cmark_syntax_extension *extension,
                              cmark_renderer *renderer, cmark_node *node,
                              cmark_event_type ev_type, int options) {
-  renderer->out(renderer, node, "~~", false, LITERAL);
+  renderer->out(renderer, node, "~", false, LITERAL);
 }
 
-cmark_syntax_extension *create_strikethrough_extension(void) {
-  cmark_syntax_extension *ext = cmark_syntax_extension_new("strikethrough");
+cmark_syntax_extension *create_subscript_extension(void) {
+  cmark_syntax_extension *ext = cmark_syntax_extension_new("subscript");
   cmark_llist *special_chars = NULL;
 
   cmark_syntax_extension_set_get_type_string_func(ext, get_type_string);
@@ -152,7 +151,7 @@ cmark_syntax_extension *create_strikethrough_extension(void) {
   cmark_syntax_extension_set_man_render_func(ext, man_render);
   cmark_syntax_extension_set_html_render_func(ext, html_render);
   cmark_syntax_extension_set_plaintext_render_func(ext, plaintext_render);
-  CMARK_NODE_STRIKETHROUGH = cmark_syntax_extension_add_node(1);
+  CMARK_NODE_SUBSCRIPT = cmark_syntax_extension_add_node(1);
 
   cmark_syntax_extension_set_match_inline_func(ext, match);
   cmark_syntax_extension_set_inline_from_delim_func(ext, insert);
