@@ -1,0 +1,9 @@
+#ifndef CMARK_GFM_SUBSCRIPT_H
+#define CMARK_GFM_SUBSCRIPT_H
+
+#include "cmark-gfm-core-extensions.h"
+
+extern cmark_node_type CMARK_NODE_SUBSCRIPT;
+cmark_syntax_extension *create_subscript_extension(void);
+
+#endif
