@@ -8,6 +8,7 @@
 
 #include "ext_scanners.h"
 #include "strikethrough.h"
+#include "subscript.h"
 #include "table.h"
 #include "cmark-gfm-core-extensions.h"
 
@@ -548,6 +549,7 @@ static int can_contain(cmark_syntax_extension *extension, cmark_node *node,
            child_type == CMARK_NODE_EMPH || child_type == CMARK_NODE_STRONG ||
            child_type == CMARK_NODE_LINK || child_type == CMARK_NODE_IMAGE ||
            child_type == CMARK_NODE_STRIKETHROUGH ||
+           child_type == CMARK_NODE_SUBSCRIPT ||
            child_type == CMARK_NODE_HTML_INLINE ||
            child_type == CMARK_NODE_FOOTNOTE_REFERENCE;
   }
