@@ -1,6 +1,7 @@
 1.9.4
   - Apply upstream PR https://github.com/github/cmark-gfm/pull/362
   - Require double-tilde `~~` for the strikethrough extension, for consistency with Pandoc's Markdown
+  - Implement subscript extension for single tilde `~`
 
 1.9.1
   - Update libcmark-gfm to 0.29.0.gfm.13
